[package]
name = "rust-blockchain"
version = "0.1.0"
authors = ["lleonesouza <lleonesouza@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.38"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7.0"